# aetherswarm

./: .env.example  .gitignore  README.md  test-system.sh
agents/scout/: requirements.txt
agents/scout/src/: faremeter.py  main.py
agents/synthesizer/: requirements.txt
agents/synthesizer/src/: main.py
agents/verifier/: Cargo.toml
agents/verifier/src/: eigencloud_sdk.rs  main.rs
backend/quest-engine/: package-lock.json  package.json  tsconfig.json
backend/quest-engine/src/: contractService.ts  index.ts
backend/quest-engine/src/adapters/: crossmint.ts
backend/quest-engine/src/middleware/: payment.ts
backend/swarm-coordinator/: package-lock.json  package.json  tsconfig.json
backend/swarm-coordinator/src/: index.ts
frontend/marketplace/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/marketplace/src/: types.ts
frontend/marketplace/src/api/: quests.ts
frontend/marketplace/src/app/: Dashboard.tsx  globals.css  layout.tsx  page.tsx
frontend/marketplace/src/components/: ThemeProvider.tsx
frontend/marketplace/src/config/: wagmi.ts
frontend/marketplace/src/context/: Web3Provider.tsx
web3/: package-lock.json  package.json
web3/contracts/: deploy.ts  hardhat.config.js  package-lock.json  package.json
web3/contracts/scripts/: deploy.js
web3/contracts/src/: ArtifactNFT.sol  DiscoveryRegistry.sol  QuestPool.sol  ReputationRegistry.sol
web3/subgraph/: schema.graphql  subgraph.yaml
web3/subgraph/src/: artifact-nft.ts  discovery-registry.ts  quest-pool.ts  reputation-registry.ts
(+13 files in other folders)
